# clipshot

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.omc/state/: hud-stdin-cache.json
.omc/state/sessions/cefaffb7-1b7b-43aa-bc5d-5a8346699ed1/: hud-state.json
clipshot/: __init__.py  __main__.py  app.py  capture.py  clipboard.py  config.py  geometry.py  history.py  hud.py  imaging.py  ocr.py  pin.py  region_selector.py  settings_ui.py  shortcuts.py  style.py  tray.py  windows.py
clipshot/annotate/: __init__.py  editor.py  tools.py
data/: clipshot-daemon.desktop  clipshot.desktop  clipshot.service
docs/: INTERFACES.md  clipshot-guide.html
extension/: README.md  extension.js  metadata.json
presets/input-remapper/: clipshot.json
scripts/: smoke_capture.py  test_selector_drag.py  verify_selector.py
tests/: test_annotate_flatten.py  test_geometry.py  test_history.py  test_imaging_config.py  test_ocr.py  test_shortcuts.py
